--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="logo">M.Gregorio</div>
         <nav id="navbar">
             <ul>
-                <li><a href="#">Sobre mi</a></li>
-                <li><a href="#">Proyectos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#welcome-section">Sobre mi</a></li>
+                <li><a href="#projects">Proyectos</a></li>
+                <li><a href="#contact">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -28,7 +28,7 @@
                 <p>
                     Soy un profesional apasionado por siempre aprender. Mi principal habilidad es la empatia, la cual me permite desempeñarme correctamente en el trabajo en equipo, pero al mismo tiempo soy independiente en la toma de decisiones. Mi objetivo es establecerme en una empresa en el área de desarrollo web ,y de a pasos cortos pero solidos superarme continuamente para llegar a nuevas alturas.
                 </p>
-                <a href="#">Proyectos</a>
+                <a href="https://github.com/MarianGregorio" target="_blank">Proyectos</a>
             </div>
             <div class="imagen borrado">
                 <img src="imagenes/WhatsApp Image 2022-05-02 at 10.49.15 PM.jpeg" alt="">
@@ -39,15 +39,15 @@
             <div class="projects-grid">
                 <a href="https://mariangregorio.github.io/webMarketing/" target="_blank" class="project projects-tile">
                     <img class="project-img" src="imagenes/WhatsApp Image 2022-05-03 at 4.40.10 PM.jpeg" alt="imagen web marketing digital">
-                    <p class="projects-title">Marketing Digital</p>
+                    <p class="projects-title"> <span class="destacado"><</span> Marketing Digital <span class="destacado">></span></p>
                 </a>
                 <a href="https://mariangregorio.github.io/form-style/" target="_blank" class="project projects-tile">
                     <img class="project-img" src="imagenes/WhatsApp Image 2022-05-03 at 5.20.54 PM.jpeg" alt="formulario con estilo">
-                    <p class="projects-title">Formulario moderno</p>
+                    <p class="projects-title"><span class="destacado"><</span> Formulario moderno <span class="destacado">></span></p>
                 </a>
                 <a href="https://mariangregorio.github.io/paginaTributo/" target="_blank" class="project projects-tile">
                     <img class="project-img" src="imagenes/WhatsApp Image 2022-05-03 at 5.25.55 PM.jpeg" alt="pagina tributo">
-                    <p class="projects-title">Pagina tributo</p>
+                    <p class="projects-title"><span class="destacado"><</span> Pagina tributo <span class="destacado">></span></p>
                 </a>
             </div>
             <a href="https://github.com/MarianGregorio" class="btn btn-show-all"   target="_blank">Saber más</a>
