--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <section id="welcome-section">
             <div class="title">
                 <h1>
-                    Hola soy Mariano Gregorio un Web Developer
+                    Hola soy Mariano Gregorio un Web Developer trainee
                 </h1>
                 <p>
                     Soy un profesional apasionado por siempre aprender. Mi principal habilidad es la empatia, la cual me permite desempeñarme correctamente en el trabajo en equipo, pero al mismo tiempo soy independiente en la toma de decisiones. Mi objetivo es establecerme en una empresa en el área de desarrollo web ,y de a pasos cortos pero solidos superarme continuamente para llegar a nuevas alturas.
