--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <i class="fa-brands fa-instagram"></i>
                         instagram
                     </a>
-                    <a href="https://github.com/MarianGregorio" class="btn-contact">
+                    <a href="https://github.com/MarianGregorio" class="btn-contact profile-link" target="_blank">
                         <i class="fa-brands fa-github"></i>
                         github
                     </a>
